<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="8dp"
    android:paddingHorizontal="4dp"
    android:background="@color/list_header">

    <TextView
        android:id="@+id/element"
        android:layout_width="0dp"
        android:layout_weight="0.05"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:text="@string/hash_sign"
        style="@style/HeaderTextViewStyle" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_weight="0.45"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/name" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/cost" />

    <TextView
        android:id="@+id/target"
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/target" />

    <TextView
        android:id="@+id/inherit"
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/inherit" />

    <TextView
        android:id="@+id/level"
        android:layout_width="0dp"
        android:layout_weight="0.05"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/level_abbreviation" />

</LinearLayout>