<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="8dp"
    android:background="@color/list_header">

    <TextView
        android:id="@+id/race"
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:text="@string/race"
        style="@style/HeaderTextViewStyle"
        />

    <TextView
        android:id="@+id/level"
        android:layout_width="0dp"
        android:layout_weight="0.10"
        android:layout_height="wrap_content"
        style="@style/HeaderTextViewStyle"
        android:text="@string/level" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_weight="0.65"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        style="@style/HeaderTextViewStyle"
        android:text="@string/name" />

</LinearLayout>